--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,12 +15,12 @@
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     place-items: center;
   }
 
   #app {
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
