--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,34 @@
+@import "tailwindcss";
+
+@theme {
+  --color-donut-100: #f6ead0;
+  --color-donut-200: #f5c6a5;
+  --color-donut-300: #f4b27a;
+  --color-donut-400: #f39e4f;
+  --color-donut-500: #f28b24;
+  --color-donut-600: #f17800;
+  --color-donut-700: #f06e00;
+  /* --color-donut-800: #c56529; */
+    --color-donut-800: rgb(105, 151, 204);
+  --color-donut-900: #ee5b00;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  --donut-bg: #f6ead0; /* Antique White - vanilla glaze */
+  --donut-primary: #E58943; /* Tiger's Eye - caramel drizzle */
+  --donut-accent: #F1D1A2; /* Deep Champagne - buttery dough */
+  --donut-text: #3E2C23; /* Chocolate Glaze */
+  --donut-highlight: #ED77B1; /* Raspberry Glaze */
+
+  /* Dark mode palette */
+  --donut-bg-dark: #2D2320; /* Dark Chocolate Glaze */
+  --donut-primary-dark: #F28B24; /* Bright Caramel */
+  --donut-accent-dark: #A67C52; /* Toasted Dough */
+  --donut-text-dark: #FCE4D8; /* Vanilla Glaze */
+  --donut-highlight-dark: #ED77B1; /* Raspberry Glaze */
+
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -8,7 +37,7 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
-  --vt-c-indigo: #2c3e50;
+  --vt-c-indigo: #c56529;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -21,9 +50,11 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
+
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: var(--donut-bg);
+  --color-background-dark: var(--donut-bg-dark);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
@@ -36,11 +67,11 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
+    --color-background: var(--donut-bg);
+    --color-background-soft: var(--donut-bg-soft);
+    --color-background-mute: var(--donut-bg-mute);
 
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
@@ -79,8 +110,38 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@theme {
+  --font-montserrat: 'MontserratBold', sans-serif;
+  --font-inter: 'Inter', sans-serif;
+  --font-roboto: 'Roboto', sans-serif;
+}
+
+@font-face {
+  font-family: MontserratBold;
+  font-style: bold;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("/fonts/Montserrat-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Montserrat;
+  font-style: regular;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("/fonts/Montserrat-Regular.woff2") format("woff2");
+}
+@font-face {
+  font-family: Montserrat;
+  /* font-style: Black; */
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("/fonts/Montserrat-Black.woff2") format("woff2");
 }
